--- a/WinePickerWeb/Scripts/WinePicker/EndToEndTests/WinePickerEndToEndTestRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/EndToEndTests/WinePickerEndToEndTestRunner.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>WineApi End-to-End Test Runner</title>
-        <script src="../angular-scenario.js" type="text/javascript" ng-autotest></script>
+        <script src="../../angular-scenario.js" type="text/javascript" ng-autotest></script>
         <script src="WinePickerEndToEndTestScenarios.js" type="text/javascript"></script>
     </head>
     <body>
