--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WineApiSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WineApiSpecRunner.html
@@ -3,14 +3,15 @@
     <head>
         <title>WineApi Jasmine Spec Runner</title>
 
-        <link href="../../Content/jasmine/jasmine.css" rel="stylesheet" type="text/css" />
-        <script src="../jasmine/jasmine.js" type="text/javascript"></script>
-        <script src="../jasmine/jasmine-html.js" type="text/javascript"></script>
-        <script src="../jquery-1.9.1.js" type="text/javascript"></script>
-        <script src="../underscore.js" type="text/javascript"></script>
+        <!-- include external source files here... -->
+        <link href="../../../Content/jasmine/jasmine.css" rel="stylesheet" type="text/css" />
+        <script src="../../jasmine/jasmine.js" type="text/javascript"></script>
+        <script src="../../jasmine/jasmine-html.js" type="text/javascript"></script>
+        <script src="../../jquery-1.9.1.js" type="text/javascript"></script>
+        <script src="../../underscore.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="WineApi.js" type="text/javascript"></script>
+        <script src="../WineApi.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WineApiSpec.js" type="text/javascript"></script>
