--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -3,20 +3,22 @@
     <head>
         <title>WinePicker Jasmine Spec Runner</title>
 
-        <link href="../../Content/jasmine/jasmine.css" rel="stylesheet" type="text/css" />
-        <script src="../jasmine/jasmine.js" type="text/javascript"></script>
-        <script src="../jasmine/jasmine-html.js" type="text/javascript"></script>
-        <script src="../jquery-1.9.1.js" type="text/javascript"></script>
-        <script src="../underscore.js" type="text/javascript"></script>
-        <script src="../angular.js" type="text/javascript"></script>
-        <script src="../angular-mocks.js" type="text/javascript"></script>
+        <!-- include external source files here... -->
+        <link href="../../../Content/jasmine/jasmine.css" rel="stylesheet" type="text/css" />
+        <script src="../../jasmine/jasmine.js" type="text/javascript"></script>
+        <script src="../../jasmine/jasmine-html.js" type="text/javascript"></script>
+        <script src="../../jquery-1.9.1.js" type="text/javascript"></script>
+        <script src="../../underscore.js" type="text/javascript"></script>
+        <script src="../../angular.js" type="text/javascript"></script>
+        <script src="../../angular-mocks.js" type="text/javascript"></script>
 
         <!-- include source files here... -->
-        <script src="WineApi.js" type="text/javascript"></script>
-        <script src="WinePickerApp.js" type="text/javascript"></script>
-        <script src="WinePickerController.js" type="text/javascript"></script>
-        <script src="SearchResultsController.js" type="text/javascript"></script>
-        <script src="WineDetailsController.js" type="text/javascript"></script>
+        <script src="../WineApi.js" type="text/javascript"></script>
+        <script src="../WineApiMenuData.js" type="text/javascript"></script>
+        <script src="../WinePickerApp.js" type="text/javascript"></script>
+        <script src="../WinePickerController.js" type="text/javascript"></script>
+        <script src="../SearchResultsController.js" type="text/javascript"></script>
+        <script src="../WineDetailsController.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
