--- a/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
+++ b/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
@@ -1,11 +1,53 @@
-<hr />
 <div ng-show="product != null">
-    <ul>
-        <li>{{product.Name}}</li>
-        <li>{{product.Url}}</li>
-        <li>{{product.Appellation.Name}}</li>
+    
+    <hr />
+
+    <ul id="myTab" class="nav nav-tabs">
+        <li class="active"><a href="#mainDetailsTab" data-toggle="tab">Main Details</a></li>
+        <li><a href="#varietalTab" data-toggle="tab">Varietal</a></li>
+        <li><a href="#appellationTab" data-toggle="tab">Appellation</a></li>
     </ul>
+
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade in active" id="mainDetailsTab">
+            <table class="span4 table table-striped table-condensed table-bordered">
+                <tbody>
+                    <tr><td>Name</td><td>{{product.Name}}</td></tr>
+                    <tr><td>Price</td><td>{{product.PriceRetail | currency}}</td></tr>
+                </tbody>
+            </table>
+            <img ng-src="{{getLargeLabelImageUrlForProduct(product)}}" alt="Label for {{product.Name}}" style="float: right;" />
+            <br />
+            <div class="span4">
+                <p>Product attributes:</p>
+                <ul style="list-style-type: none; margin: 0;">
+                    <li ng-repeat="productAttribute in product.ProductAttributes | filter:productAttributeWithImageUrl" style="display: inline; margin-right: 5px;">
+                        <img ng-src="{{productAttribute.ImageUrl}}" title="{{productAttribute.Name}}" alt="{{productAttribute.Name}}" />
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="varietalTab">
+            <table class="span4 table table-striped table-condensed table-bordered">
+                <tbody>
+                    <tr><td>Wine Type</td><td><a ng-href="{{product.Varietal.Winetype.Url}}" target="_blank">{{product.Varietal.WineType.Name}}</a></td></tr>
+                    <tr><td>Varietal</td><td><a ng-href="{{product.Varietal.Url}}" target="_blank">{{product.Varietal.Name}}</a></td></tr>
+                    <tr><td>Vineyard</td><td><a ng-href="{{product.Vineyard.Url}}" target="_blank">{{product.Vineyard.Name}}</a></td></tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="tab-pane fade" id="appellationTab">
+            <table class="span4 table table-striped table-condensed table-bordered">
+                <tbody>
+                    <tr><td>Region</td><td><a ng-href="{{product.Appellation.Region.Url}}" target="_blank">{{product.Appellation.Region.Name}}</a></td></tr>
+                    <tr><td>Appellation</td><td><a ng-href="{{product.Appellation.Url}}" target="_blank">{{product.Appellation.Name}}</a></td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <p>
         <a href="#/searchResults">Back to the search results</a>
     </p>
+
 </div>
