--- a/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
+++ b/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
@@ -1,4 +1,4 @@
-<div ng-show="product != null">
+<div data-ng-show="product != null">
     
     <hr />
 
@@ -12,17 +12,17 @@
         <div class="tab-pane fade in active" id="mainDetailsTab">
             <table class="span4 table table-striped table-condensed table-bordered">
                 <tbody>
-                    <tr><td>Name</td><td>{{product.Name}}</td></tr>
+                    <tr><td>Name</td><td><a data-ng-href="{{product.Url}}" target="_blank">{{product.Name}}</a><span data-jt-external-link /></td></tr>
                     <tr><td>Price</td><td>{{product.PriceRetail | currency}}</td></tr>
                 </tbody>
             </table>
-            <img ng-src="{{getLargeLabelImageUrlForProduct(product)}}" alt="Label for {{product.Name}}" style="float: right;" />
+            <img data-ng-src="{{getLargeLabelImageUrlForProduct(product)}}" alt="Label for {{product.Name}}" style="float: right;" />
             <br />
-            <div class="span4" ng-show="hasProductAttributes">
+            <div class="span4" data-ng-show="hasProductAttributes">
                 <p>Product attributes:</p>
                 <ul style="list-style-type: none; margin: 0;">
-                    <li ng-repeat="productAttribute in product.ProductAttributes | filter:productAttributeHasImageUrl" style="display: inline; margin-right: 5px;">
-                        <img ng-src="{{productAttribute.ImageUrl}}" title="{{productAttribute.Name}}" alt="{{productAttribute.Name}}" />
+                    <li data-ng-repeat="productAttribute in product.ProductAttributes | filter:productAttributeHasImageUrl" style="display: inline; margin-right: 5px;">
+                        <img data-ng-src="{{productAttribute.ImageUrl}}" title="{{productAttribute.Name}}" alt="{{productAttribute.Name}}" />
                     </li>
                 </ul>
             </div>
@@ -30,17 +30,17 @@
         <div class="tab-pane fade" id="varietalTab">
             <table class="span4 table table-striped table-condensed table-bordered">
                 <tbody>
-                    <tr><td>Wine Type</td><td><a ng-href="{{product.Varietal.Winetype.Url}}" target="_blank">{{product.Varietal.WineType.Name}}</a></td></tr>
-                    <tr><td>Varietal</td><td><a ng-href="{{product.Varietal.Url}}" target="_blank">{{product.Varietal.Name}}</a></td></tr>
-                    <tr><td>Vineyard</td><td><a ng-href="{{product.Vineyard.Url}}" target="_blank">{{product.Vineyard.Name}}</a></td></tr>
+                    <tr><td>Wine Type</td><td><a data-ng-href="{{product.Varietal.WineType.Url}}" target="_blank">{{product.Varietal.WineType.Name}}</a><span data-jt-external-link /></td></tr>
+                    <tr><td>Varietal</td><td><a data-ng-href="{{product.Varietal.Url}}" target="_blank">{{product.Varietal.Name}}</a><span data-jt-external-link /></td></tr>
+                    <tr><td>Vineyard</td><td><a data-ng-href="{{product.Vineyard.Url}}" target="_blank">{{product.Vineyard.Name}}</a><span data-jt-external-link /></td></tr>
                 </tbody>
             </table>
         </div>
         <div class="tab-pane fade" id="appellationTab">
             <table class="span4 table table-striped table-condensed table-bordered">
                 <tbody>
-                    <tr><td>Region</td><td><a ng-href="{{product.Appellation.Region.Url}}" target="_blank">{{product.Appellation.Region.Name}}</a></td></tr>
-                    <tr><td>Appellation</td><td><a ng-href="{{product.Appellation.Url}}" target="_blank">{{product.Appellation.Name}}</a></td></tr>
+                    <tr><td>Region</td><td><a data-ng-href="{{product.Appellation.Region.Url}}" target="_blank">{{product.Appellation.Region.Name}}</a><span data-jt-external-link /></td></tr>
+                    <tr><td>Appellation</td><td><a data-ng-href="{{product.Appellation.Url}}" target="_blank">{{product.Appellation.Name}}</a><span data-jt-external-link /></td></tr>
                 </tbody>
             </table>
         </div>
