We now remember the slide number when returning to search results from wine details
Added a new directive to track the current slide number by binding to
the slid event of the carousel. Also, added a new SearchResultsModel
injectable for the SearchResultsController to maintain state between
different instances of SearchResultsController.

--- a/WinePickerWeb/AngularJSTemplates/WinePicker/SearchResults.html
+++ b/WinePickerWeb/AngularJSTemplates/WinePicker/SearchResults.html
@@ -4,12 +4,9 @@
         Total number of matching products found: {{products.Total}}
     </div>
     <br />
-    <div id="myCarousel" class="carousel slide" data-ng-show="products.Total > 0" data-jt-carousel-cycle="products != null && products.List.length > 0">
-        <ol class="carousel-indicators">
-            <li data-ng-repeat="product in products.List" data-target="#myCarousel" data-slide-to="{{$index}}" data-ng-class="{active: $first}"></li>
-        </ol>
+    <div id="myCarousel" class="carousel slide" data-ng-show="products.Total > 0" data-jt-carousel-cycle="products != null && products.List.length > 1" data-jt-carousel-tracker="model.currentSlideNumber">
         <div class="carousel-inner">
-            <div data-ng-repeat="product in products.List" class="item" data-ng-class="{active: $first}">
+            <div data-ng-repeat="product in products.List" class="item" data-ng-class="{active: $index == model.currentSlideNumber}">
                 <div style="margin-left: 70px; margin-right: 70px; height: 200px;">
                     <img data-ng-src="{{getLargeLabelImageUrlForProduct(product)}}" title="Label for {{product.Name}}" alt="Label for {{product.Name}}" style="float: left;" />
                     <div style="float: left;">
@@ -30,4 +27,9 @@
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div>
+    <pre>
+$scope.model.currentSlideNumber: {{model.currentSlideNumber}}
+$scope.model.offset: {{model.offset}}
+$scope.model.size: {{model.size}}
+    </pre>
 </div>
