--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -19,6 +19,7 @@
         <script src="../WinePickerController.js" type="text/javascript"></script>
         <script src="../SearchResultsController.js" type="text/javascript"></script>
         <script src="../WineDetailsController.js" type="text/javascript"></script>
+        <script src="../Models.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
