--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -17,12 +17,14 @@
         <script src="../WineApiMenuData.js" type="text/javascript"></script>
         <script src="../WinePickerApp.js" type="text/javascript"></script>
         <script src="../WinePickerController.js" type="text/javascript"></script>
+        <script src="../SearchCriteriaController.js" type="text/javascript"></script>
         <script src="../SearchResultsController.js" type="text/javascript"></script>
         <script src="../WineDetailsController.js" type="text/javascript"></script>
         <script src="../Models.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
+        <script src="SearchCriteriaControllerSpec.js" type="text/javascript"></script>
         <script src="SearchResultsControllerSpec.js" type="text/javascript"></script>
         <script src="WineDetailsControllerSpec.js" type="text/javascript"></script>
 
