--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -21,12 +21,14 @@
         <script src="../SearchResultsController.js" type="text/javascript"></script>
         <script src="../WineDetailsController.js" type="text/javascript"></script>
         <script src="../Models.js" type="text/javascript"></script>
+        <script src="../Utils.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
         <script src="SearchCriteriaControllerSpec.js" type="text/javascript"></script>
         <script src="SearchResultsControllerSpec.js" type="text/javascript"></script>
         <script src="WineDetailsControllerSpec.js" type="text/javascript"></script>
+        <script src="UtilsSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
