--- a/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
+++ b/WinePickerWeb/AngularJSTemplates/WinePicker/WineDetails.html
@@ -50,7 +50,7 @@
     </div>
 
     <p>
-        <a href="#/searchResults">Back to the search results</a>
+        <a data-ng-href="{{ '#/searchResults/' + searchCriteriaModel.encode() }}">Back to the search results</a>
     </p>
 
 </div>
