--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -28,6 +28,7 @@
         <script src="SearchCriteriaControllerSpec.js" type="text/javascript"></script>
         <script src="SearchResultsControllerSpec.js" type="text/javascript"></script>
         <script src="WineDetailsControllerSpec.js" type="text/javascript"></script>
+        <script src="ModelsSpec.js" type="text/javascript"></script>
         <script src="UtilsSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
