--- a/WinePickerWeb/AngularJSTemplates/WinePicker/SearchResults.html
+++ b/WinePickerWeb/AngularJSTemplates/WinePicker/SearchResults.html
@@ -20,7 +20,7 @@
                                 <tr><td>Varietal</td><td>{{product.Varietal.Name}}</td></tr>
                                 <tr><td>Appellation</td><td>{{product.Appellation.Name}}</td></tr>
                                 <tr><td>Price</td><td>{{product.PriceRetail | currency}}</td></tr>
-                                <tr><td colspan="2"><a data-ng-href="#/wines/{{product.Id}}">View product details</a>&nbsp;(in-page)</td></tr>
+                                <tr><td colspan="2"><a data-ng-href="{{searchResultsModel.buildWineDetailsPath(product)}}">View product details</a>&nbsp;(in-page)</td></tr>
                                 <tr><td colspan="2"><a data-ng-href="{{product.Url}}" target="_blank">View product details</a><span data-jt-external-link /></td></tr>
                             </tbody>
                         </table>
