Factored out a WineApiProxy injectable

--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -22,6 +22,7 @@
         <script src="../WineDetailsController.js" type="text/javascript"></script>
         <script src="../Models.js" type="text/javascript"></script>
         <script src="../Utils.js" type="text/javascript"></script>
+        <script src="../WineApiProxy.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
@@ -30,6 +31,7 @@
         <script src="WineDetailsControllerSpec.js" type="text/javascript"></script>
         <script src="ModelsSpec.js" type="text/javascript"></script>
         <script src="UtilsSpec.js" type="text/javascript"></script>
+        <script src="WineApiProxySpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
