Fixed failing unit tests
Also, moved WineApi.js and its unit tests into a separate folder since
we no longer use it (we now do all wine.com API calls via the server
which acts as a proxy).

--- a/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
+++ b/WinePickerWeb/Scripts/WinePicker/JasmineTests/WinePickerSpecRunner.html
@@ -23,6 +23,7 @@
         <script src="../Models.js" type="text/javascript"></script>
         <script src="../Utils.js" type="text/javascript"></script>
         <script src="../WineApiProxy.js" type="text/javascript"></script>
+        <script src="../WineApiConstants.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WinePickerControllerSpec.js" type="text/javascript"></script>
