Started to rewrite wineApi.UrlBuilder to have proper per-instance private variables etc.

--- a/WinePickerWeb/Scripts/WineApi/JasmineTests/WineApiSpecRunner.html
+++ b/WinePickerWeb/Scripts/WineApi/JasmineTests/WineApiSpecRunner.html
@@ -12,9 +12,11 @@
 
         <!-- include source files here... -->
         <script src="../WineApi.js" type="text/javascript"></script>
+        <script src="../UrlBuilder.js" type="text/javascript"></script>
 
         <!-- include spec files here... -->
         <script src="WineApiSpec.js" type="text/javascript"></script>
+        <script src="UrlBuilderSpec.js" type="text/javascript"></script>
 
         <script type="text/javascript">
             (function () {
